@@ -4,7 +4,16 @@ import static dev.morphia.query.Sort.ascending;
 import static dev.morphia.query.experimental.filters.Filters.eq;
 import static dev.morphia.query.experimental.filters.Filters.gte;
 import static dev.morphia.query.experimental.filters.Filters.in;
-import static eu.europeana.entitymanagement.definitions.batch.EMBatchConstants.*;
+import static dev.morphia.query.experimental.filters.Filters.or;
+import static eu.europeana.entitymanagement.definitions.batch.EMBatchConstants.CREATED;
+import static eu.europeana.entitymanagement.definitions.batch.EMBatchConstants.DOC_SET;
+import static eu.europeana.entitymanagement.definitions.batch.EMBatchConstants.DOC_SET_ON_INSERT;
+import static eu.europeana.entitymanagement.definitions.batch.EMBatchConstants.ENTITY_ID;
+import static eu.europeana.entitymanagement.definitions.batch.EMBatchConstants.HAS_BEEN_PROCESSED;
+import static eu.europeana.entitymanagement.definitions.batch.EMBatchConstants.MODIFIED;
+import static eu.europeana.entitymanagement.definitions.batch.EMBatchConstants.MORPHIA_DISCRIMINATOR;
+import static eu.europeana.entitymanagement.definitions.batch.EMBatchConstants.SCHEDULED_TASK_CLASSNAME;
+import static eu.europeana.entitymanagement.definitions.batch.EMBatchConstants.UPDATE_TYPE;
 import static eu.europeana.entitymanagement.mongo.utils.MorphiaUtils.MULTI_DELETE_OPTS;
 import static eu.europeana.entitymanagement.mongo.utils.MorphiaUtils.UPSERT_OPTS;
 
@@ -19,7 +28,8 @@ import dev.morphia.aggregation.experimental.stages.Unwind;
 import dev.morphia.query.FindOptions;
 import dev.morphia.query.experimental.filters.Filter;
 import dev.morphia.query.internal.MorphiaCursor;
-import eu.europeana.entitymanagement.common.config.AppConfigConstants;
+import eu.europeana.entitymanagement.common.vocabulary.AppConfigConstants;
+import eu.europeana.entitymanagement.definitions.batch.model.BatchEntityRecord;
 import eu.europeana.entitymanagement.definitions.batch.model.FailedTask;
 import eu.europeana.entitymanagement.definitions.batch.model.ScheduledTask;
 import eu.europeana.entitymanagement.definitions.batch.model.ScheduledTaskType;
@@ -27,6 +37,7 @@ import eu.europeana.entitymanagement.definitions.batch.model.ScheduledUpdateType
 import eu.europeana.entitymanagement.definitions.model.EntityRecord;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 import org.bson.Document;
 import org.springframework.beans.factory.InitializingBean;
@@ -51,21 +62,20 @@ public class ScheduledTaskRepository implements InitializingBean {
   }
 
   /**
-   * Marks the given tasks as "processed". Update only occurs if current updateType for a task
-   * matches the specified updateType.
+   * Marks the given tasks as "processed". Update only occurs if a task matches the specified query
+   * filter document.
    *
-   * @param updateType batch update type
    * @param tasks list of scheduled tasks
    * @return BulkWriteResult of db query
    */
-  public BulkWriteResult markAsProcessed(ScheduledTaskType updateType, List<ScheduledTask> tasks) {
+  public BulkWriteResult markAsProcessed(List<ScheduledTask> tasks) {
     List<WriteModel<ScheduledTask>> updates = new ArrayList<>();
     for (ScheduledTask task : tasks) {
       updates.add(
           new UpdateOneModel<>(
               // query filters on updateType
               new Document(ENTITY_ID, task.getEntityId())
-                  .append(UPDATE_TYPE, updateType.getValue()),
+                  .append(UPDATE_TYPE, task.getUpdateType().getValue()),
               new Document(
                   DOC_SET,
                   new Document(HAS_BEEN_PROCESSED, task.hasBeenProcessed())
@@ -125,13 +135,15 @@ public class ScheduledTaskRepository implements InitializingBean {
   /**
    * Deletes {@link ScheduledTask} entries in the db that have been processed
    *
-   * @param updateType updateType to filter on
+   * @param updateType update types to filter on
    * @return number of deleted entries
    */
-  public long removeProcessedTasks(ScheduledTaskType updateType) {
+  public long removeProcessedTasks(List<? extends ScheduledTaskType> updateType) {
     return datastore
         .find(ScheduledTask.class)
-        .filter(eq(HAS_BEEN_PROCESSED, true), eq(UPDATE_TYPE, updateType.getValue()))
+        .filter(
+            eq(HAS_BEEN_PROCESSED, true),
+            or(updateType.stream().map(u -> eq(UPDATE_TYPE, u.getValue())).toArray(Filter[]::new)))
         .delete(MULTI_DELETE_OPTS)
         .getDeletedCount();
   }
@@ -147,31 +159,38 @@ public class ScheduledTaskRepository implements InitializingBean {
    * @param filters Query filters
    * @return List with results
    */
-  public List<? extends EntityRecord> getEntityRecordsForTasks(
-      int start, int count, Filter[] filters) {
+  public List<BatchEntityRecord> getEntityRecordsForTasks(int start, int count, Filter[] filters) {
     List<ScheduledTask> scheduledTasks =
         datastore
             .find(ScheduledTask.class)
             .filter(filters)
             .iterator(
                 new FindOptions()
-                    // we only care about the EntityID
+                    // we only care about the EntityID and update type
                     .projection()
-                    .include(ENTITY_ID)
+                    .include(ENTITY_ID, UPDATE_TYPE)
                     .skip(start)
                     // matches the index sort order defined in ScheduledTask
-                    .sort(ascending(CREATED))
+                    // sort with _id in case of multiple matching created values
+                    .sort(ascending(CREATED), ascending(ENTITY_ID))
                     .limit(count))
             .toList();
 
-    List<String> matchingIds =
-        scheduledTasks.stream().map(ScheduledTask::getEntityId).collect(Collectors.toList());
+    // Use EntityId - ScheduledTaskType map for quick lookup
+    Map<String, ScheduledTaskType> taskTypeMap =
+        scheduledTasks.stream()
+            .collect(Collectors.toMap(ScheduledTask::getEntityId, ScheduledTask::getUpdateType));
 
-    return datastore
-        .find(EntityRecord.class)
-        .filter(in(ENTITY_ID, matchingIds))
-        .iterator()
-        .toList();
+    List<EntityRecord> entityRecords =
+        datastore
+            .find(EntityRecord.class)
+            .filter(in(ENTITY_ID, taskTypeMap.keySet()))
+            .iterator()
+            .toList();
+
+    return entityRecords.stream()
+        .map(r -> new BatchEntityRecord(r, taskTypeMap.get(r.getEntityId())))
+        .collect(Collectors.toList());
   }
 
   public ScheduledTask getTask(String entityId) {
@@ -191,11 +210,14 @@ public class ScheduledTaskRepository implements InitializingBean {
    * value. Note: this method returns a cursor, which callers are responsible for closing
    */
   public MorphiaCursor<ScheduledTask> getTasksWithFailures(
-      int maxFailedTaskRetries, ScheduledTaskType updateType) {
-
+      int maxFailedTaskRetries, List<? extends ScheduledTaskType> updateType) {
     return datastore
         .aggregate(ScheduledTask.class)
-        .match(eq(HAS_BEEN_PROCESSED, false), eq(UPDATE_TYPE, updateType.getValue()))
+        .match(
+            eq(HAS_BEEN_PROCESSED, false),
+            in(
+                UPDATE_TYPE,
+                updateType.stream().map(ScheduledTaskType::getValue).collect(Collectors.toList())))
         // both collections use the same entityId field name
         .lookup(
             Lookup.from(FailedTask.class)
